// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Templates/Show should render a spinner when loading 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Show
    config={
      Object {
        "images": Object {
          "backdrop_sizes": Array [
            "1",
            "2",
            "3",
            "4",
          ],
          "poster_sizes": Array [
            "1",
            "2",
            "3",
            "4",
          ],
          "secure_base_url": "path/to/image",
        },
      }
    }
    configLoading={false}
    genresLoading={false}
    loading={true}
    show={
      Object {
        "id": 141052,
        "title": "title",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "context": Object {
      "router": Object {
        "history": Array [
          "/movie",
        ],
      },
    },
  },
}
`;

exports[`Templates/Show should render as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Show
    config={
      Object {
        "images": Object {
          "backdrop_sizes": Array [
            "1",
            "2",
            "3",
            "4",
          ],
          "poster_sizes": Array [
            "1",
            "2",
            "3",
            "4",
          ],
          "secure_base_url": "path/to/image",
        },
      }
    }
    configLoading={false}
    genresLoading={false}
    loading={false}
    show={
      Object {
        "id": 1,
        "title": "title",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <PageTransition>
        <ShowProfile
          config={
            Object {
              "images": Object {
                "backdrop_sizes": Array [
                  "1",
                  "2",
                  "3",
                  "4",
                ],
                "poster_sizes": Array [
                  "1",
                  "2",
                  "3",
                  "4",
                ],
                "secure_base_url": "path/to/image",
              },
            }
          }
          dcolor={
            Array [
              0,
              0,
              0,
            ]
          }
          handleFullCrewClick={[Function]}
          handleShowClick={[Function]}
          show={
            Object {
              "id": 1,
              "title": "title",
            }
          }
        />
      </PageTransition>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ShowProfile
          config={
            Object {
              "images": Object {
                "backdrop_sizes": Array [
                  "1",
                  "2",
                  "3",
                  "4",
                ],
                "poster_sizes": Array [
                  "1",
                  "2",
                  "3",
                  "4",
                ],
                "secure_base_url": "path/to/image",
              },
            }
          }
          dcolor={
            Array [
              0,
              0,
              0,
            ]
          }
          handleFullCrewClick={[Function]}
          handleShowClick={[Function]}
          show={
            Object {
              "id": 1,
              "title": "title",
            }
          }
        />,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "config": Object {
            "images": Object {
              "backdrop_sizes": Array [
                "1",
                "2",
                "3",
                "4",
              ],
              "poster_sizes": Array [
                "1",
                "2",
                "3",
                "4",
              ],
              "secure_base_url": "path/to/image",
            },
          },
          "dcolor": Array [
            0,
            0,
            0,
          ],
          "handleFullCrewClick": [Function],
          "handleShowClick": [Function],
          "show": Object {
            "id": 1,
            "title": "title",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <PageTransition>
          <ShowProfile
            config={
              Object {
                "images": Object {
                  "backdrop_sizes": Array [
                    "1",
                    "2",
                    "3",
                    "4",
                  ],
                  "poster_sizes": Array [
                    "1",
                    "2",
                    "3",
                    "4",
                  ],
                  "secure_base_url": "path/to/image",
                },
              }
            }
            dcolor={
              Array [
                0,
                0,
                0,
              ]
            }
            handleFullCrewClick={[Function]}
            handleShowClick={[Function]}
            show={
              Object {
                "id": 1,
                "title": "title",
              }
            }
          />
        </PageTransition>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ShowProfile
            config={
              Object {
                "images": Object {
                  "backdrop_sizes": Array [
                    "1",
                    "2",
                    "3",
                    "4",
                  ],
                  "poster_sizes": Array [
                    "1",
                    "2",
                    "3",
                    "4",
                  ],
                  "secure_base_url": "path/to/image",
                },
              }
            }
            dcolor={
              Array [
                0,
                0,
                0,
              ]
            }
            handleFullCrewClick={[Function]}
            handleShowClick={[Function]}
            show={
              Object {
                "id": 1,
                "title": "title",
              }
            }
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": "1",
          "nodeType": "class",
          "props": Object {
            "config": Object {
              "images": Object {
                "backdrop_sizes": Array [
                  "1",
                  "2",
                  "3",
                  "4",
                ],
                "poster_sizes": Array [
                  "1",
                  "2",
                  "3",
                  "4",
                ],
                "secure_base_url": "path/to/image",
              },
            },
            "dcolor": Array [
              0,
              0,
              0,
            ],
            "handleFullCrewClick": [Function],
            "handleShowClick": [Function],
            "show": Object {
              "id": 1,
              "title": "title",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "context": Object {
      "router": Object {
        "history": Array [
          "/movie",
        ],
      },
    },
  },
}
`;

exports[`Templates/Show should render as expected with new props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Show
    config={
      Object {
        "images": Object {
          "backdrop_sizes": Array [
            "1",
            "2",
            "3",
            "4",
          ],
          "poster_sizes": Array [
            "1",
            "2",
            "3",
            "4",
          ],
          "secure_base_url": "path/to/image",
        },
      }
    }
    configLoading={false}
    genresLoading={false}
    loading={false}
    show={
      Object {
        "id": 141052,
        "title": "title",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <PageTransition>
        <ShowProfile
          config={
            Object {
              "images": Object {
                "backdrop_sizes": Array [
                  "1",
                  "2",
                  "3",
                  "4",
                ],
                "poster_sizes": Array [
                  "1",
                  "2",
                  "3",
                  "4",
                ],
                "secure_base_url": "path/to/image",
              },
            }
          }
          dcolor={
            Array [
              0,
              0,
              0,
            ]
          }
          handleFullCrewClick={[Function]}
          handleShowClick={[Function]}
          show={
            Object {
              "id": 141052,
              "title": "title",
            }
          }
        />
      </PageTransition>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ShowProfile
          config={
            Object {
              "images": Object {
                "backdrop_sizes": Array [
                  "1",
                  "2",
                  "3",
                  "4",
                ],
                "poster_sizes": Array [
                  "1",
                  "2",
                  "3",
                  "4",
                ],
                "secure_base_url": "path/to/image",
              },
            }
          }
          dcolor={
            Array [
              0,
              0,
              0,
            ]
          }
          handleFullCrewClick={[Function]}
          handleShowClick={[Function]}
          show={
            Object {
              "id": 141052,
              "title": "title",
            }
          }
        />,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": "141052",
        "nodeType": "class",
        "props": Object {
          "config": Object {
            "images": Object {
              "backdrop_sizes": Array [
                "1",
                "2",
                "3",
                "4",
              ],
              "poster_sizes": Array [
                "1",
                "2",
                "3",
                "4",
              ],
              "secure_base_url": "path/to/image",
            },
          },
          "dcolor": Array [
            0,
            0,
            0,
          ],
          "handleFullCrewClick": [Function],
          "handleShowClick": [Function],
          "show": Object {
            "id": 141052,
            "title": "title",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <PageTransition>
          <ShowProfile
            config={
              Object {
                "images": Object {
                  "backdrop_sizes": Array [
                    "1",
                    "2",
                    "3",
                    "4",
                  ],
                  "poster_sizes": Array [
                    "1",
                    "2",
                    "3",
                    "4",
                  ],
                  "secure_base_url": "path/to/image",
                },
              }
            }
            dcolor={
              Array [
                0,
                0,
                0,
              ]
            }
            handleFullCrewClick={[Function]}
            handleShowClick={[Function]}
            show={
              Object {
                "id": 141052,
                "title": "title",
              }
            }
          />
        </PageTransition>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ShowProfile
            config={
              Object {
                "images": Object {
                  "backdrop_sizes": Array [
                    "1",
                    "2",
                    "3",
                    "4",
                  ],
                  "poster_sizes": Array [
                    "1",
                    "2",
                    "3",
                    "4",
                  ],
                  "secure_base_url": "path/to/image",
                },
              }
            }
            dcolor={
              Array [
                0,
                0,
                0,
              ]
            }
            handleFullCrewClick={[Function]}
            handleShowClick={[Function]}
            show={
              Object {
                "id": 141052,
                "title": "title",
              }
            }
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": "141052",
          "nodeType": "class",
          "props": Object {
            "config": Object {
              "images": Object {
                "backdrop_sizes": Array [
                  "1",
                  "2",
                  "3",
                  "4",
                ],
                "poster_sizes": Array [
                  "1",
                  "2",
                  "3",
                  "4",
                ],
                "secure_base_url": "path/to/image",
              },
            },
            "dcolor": Array [
              0,
              0,
              0,
            ],
            "handleFullCrewClick": [Function],
            "handleShowClick": [Function],
            "show": Object {
              "id": 141052,
              "title": "title",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "context": Object {
      "router": Object {
        "history": Array [
          "/movie",
        ],
      },
    },
  },
}
`;
